crates/math-core/tests/snapshots/error_test__kern_math_unit.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern1mu y"
---
Error: Math unit "mu" cannot be used with \kern/\hskip/\hspace.
   ╭─[ <input>:1:8 ]
   │
 1 │ x\kern1mu y
   │        ─┬  
   │         ╰── illegal unit here
───╯
